Add unit tests for combat game and fix Java 17 compatibility
Co-authored-by: ZoeMcFife <93198038+ZoeMcFife@users.noreply.github.com>